<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:paddingStart="@dimen/gpb_digital_invoice_header_padding_left"
    android:paddingTop="@dimen/gpb_digital_invoice_header_padding_top"
    android:paddingEnd="@dimen/gpb_digital_invoice_header_padding_right"
    android:paddingBottom="@dimen/gpb_digital_invoice_header_padding_bottom">

    <TextView
        android:id="@+id/gpb_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/gpb_digital_invoice_header_title_horizontal_margin"
        android:layout_marginTop="@dimen/gpb_digital_invoice_header_title_margin_top"
        android:layout_marginEnd="@dimen/gpb_digital_invoice_header_title_horizontal_margin"
        android:gravity="center_horizontal"
        android:lineSpacingMultiplier="1.3"
        android:text="@string/gpb_digital_invoice_scan_success"
        android:textAppearance="@style/GiniCaptureTheme.DigitalInvoice.Title.TextStyle" />

    <ImageView
        android:id="@+id/gpb_digital_invoice_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gpb_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/gpb_digital_invoice_header_hero_image_margin_top"
        android:layout_marginBottom="@dimen/gpb_digital_invoice_header_hero_image_margin_bottom"
        android:src="@drawable/gpb_digital_invoice_image" />

    <RelativeLayout
        android:id="@+id/gpb_line_items_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gpb_digital_invoice_image">

        <TextView
            android:id="@+id/gpb_selected_and_total_items_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/gpb_what_is_this_button"
            android:layout_alignParentStart="true"
            android:text="@string/gpb_digital_invoice_items"
            android:textAppearance="@style/GiniCaptureTheme.DigitalInvoice.SelectedAndTotalItems.TextStyle" />

        <TextView
            android:id="@+id/gpb_selected_and_total_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/gpb_what_is_this_button"
            android:layout_toEndOf="@id/gpb_selected_and_total_items_label"
            android:textAppearance="@style/GiniCaptureTheme.DigitalInvoice.SelectedAndTotalItems.TextStyle"
            tools:text=" 2/2" />

        <Button
            android:id="@+id/gpb_what_is_this_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/gpb_digital_invoice_header_help_margin_right"
            android:drawableEnd="@drawable/gpb_help_icon_dark"
            android:drawablePadding="@dimen/gpb_digital_invoice_header_help_button_padding"
            android:text="@string/gpb_digital_invoice_what_is_this_button"
            android:textAllCaps="false"
            android:textAppearance="@style/GiniCaptureTheme.DigitalInvoice.WhatIsThis.TextStyle"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

</RelativeLayout>
